--- a/static/styles.css
+++ b/static/styles.css
@@ -1,42 +1,56 @@
+.game-table {
+    margin: 10px;
+    border: 1px solid rgba(1, 1, 1, 1);
+    float: left;
+}
 
-td {
+.game-table td {
     height: 10px;
     width: 10px;
-    border: 1px solid rgba(1, 1, 1, 0.3); 
+    border: 1px solid rgba(1, 1, 1, 0.20); 
 }
-   
-table {
-    border: 1px solid rgba(1, 1, 1, 1);
+
+.score-table {
+    margin: 10px;
+    float: right;
+    border: 1px solid rgba(1, 1, 1, 0.10);
 }
 
 .tetromino-0 {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .tetromino-1 {
-    background-color: rgba(0, 255, 255, 0.8);
+    background-color: rgba(0, 255, 255, 0.85);
+    border: 1px solid rgba(0, 255, 255, 0.85);
 }
 
 .tetromino-2 {
-    background-color: rgba(255, 255, 0, 0.8);
+    background-color: rgba(245, 245, 0, 0.85);
+    border: 1px solid rgba(245, 245, 0, 0.85);
 }
 
 .tetromino-3 {
-    background-color: rgba(255, 0, 255, 0.8);
+    background-color: rgba(255, 0, 255, 0.80);
+    border: 1px solid rgba(255, 0, 255, 0.80);
 }
 
 .tetromino-4 {
-    background-color: rgba(0, 0, 255, 0.8);
+    background-color: rgba(0, 0, 255, 0.80);
+    border: 1px solid rgba(0, 0, 255, 0.80);
 }
 
 .tetromino-5 {
-    background-color: rgba(255, 123, 0, 0.8);
+    background-color: rgba(255, 123, 0, 0.80);
+    border: 1px solid rgba(255, 123, 0, 0.80);
 }
 
 .tetromino-6 {
-    background-color: rgba(0, 255, 0, 0.8);
+    background-color: rgba(0, 255, 0, 0.80);
+    border: 1px solid rgba(0, 255, 0, 0.80);
 }
 
 .tetromino-7 {
-    background-color: rgba(255, 0, 0, 0.8);    
+    background-color: rgba(255, 0, 0, 0.80);
+    border: 1px solid rgba(255, 0, 0, 0.80); 
 }
